--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <body>
     <main>
       <h1>Auswärtsspiel - Azure Static Web App</h1>
+      <p class="message"></p>
     </main>
+    <script type="module" src="main.js"></script>
   </body>
 </html>
