--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <main>
       <h1>Auswärtsspiel - Azure Static Web App</h1>
-      <p class="message"></p>
+      <p class="message">Hello, World.</p>
     </main>
     <script type="module" src="main.js"></script>
   </body>
